Fix diet and diary table overflow

--- a/src/app/diary/diary.component.css
+++ b/src/app/diary/diary.component.css
@@ -1,3 +1,8 @@
+:host .row {
+  margin-right: 0;
+  margin-left: 0;
+}
+
 /* Animación del modal */
 .modal.fade .modal-dialog {
   transition: transform 0.3s ease-out;
